# axum-todo

backend/rust/axum/project_solution/: .env  Cargo.toml
backend/rust/axum/project_solution/src/: lib.rs  main.rs  router.rs
backend/rust/axum/project_solution/src/middleware/: require_authentication.rs
backend/rust/axum/project_solution/src/routes/: mod.rs
backend/rust/axum/project_solution/src/routes/tasks/: create_task.rs  create_task_extractor.rs  delete_task.rs  get_all_task.rs  get_one_task.rs  mod.rs  update_task.rs
backend/rust/axum/project_solution/src/routes/users/: create_user.rs  login.rs  mod.rs
backend/rust/axum/project_solution/src/utilities/: hash.rs  jwt.rs
integration-tests/backend-tests/: .env  .env-example  api.test.js  knexfile.js  package-lock.json  package.json
