[package]
name = "project_solution"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
bcrypt = "0.15.1"
chrono = "0.4.38"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
jsonwebtoken = "9.3.0"
sea-orm = { version = "0.12.15", features = [
  "runtime-tokio-rustls",
  "sqlx-postgres",
] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
serde_with = "3.9.0"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
validator = { version = "0.18.1", features = ["derive"] }
